revert(mwpw-139846): revert carousel cutoff change - was fixed by other changes

--- a/less/components/consonant/cards-carousel.less
+++ b/less/components/consonant/cards-carousel.less
@@ -245,7 +245,7 @@
                     z-index: 5;
 
                     @media @consonant-carousel-down {
-                        margin-right: 10%;
+                        margin-right: 36px;
                     }
 
                     &.consonant {
